# ai-research-forcePose-fork

./: .gitignore  coreML_export.ipynb  custom_infer.py  get_data.ipynb  make_video.ipynb  make_video.py  make_video_forceplate.ipynb  merge_videos.py  pyproject.toml  read_forceplate.ipynb  run_poseformer_force.py  test.ipynb
common/: arguments.py  model_poseformer.py
data/: prepare_data_force_pose.py
